<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mitsubishi_robot_description</name>
    <version>0.0.0</version>
    <description>Package with URDF and description files of Mitsubishi RV-6SDL-S15 robot.</description>
    <maintainer email="joshua.h.turner@vanderbilt.edu">Joshua Turner</maintainer>
    <author email="joshua.h.turner@vanderbilt.edu">Joshua Turner</author>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>