<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mitsubishi_robot_hardware</name>
    <version>0.0.0</version>
    <description>Mitsubishi Robot hardware implementation</description>
    <maintainer email="joshua.h.turner@vanderbilt.edu">Joshua Turner</maintainer>
    <author email="joshua.h.turner@vanderbilt.edu">Joshua turner</author>
    <license>BSD</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>boost</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
